Interim commit trying to use a copy of the shared MainPage.xaml. Encountering errors with the generated files.

--- a/Samples/UserInfo/cppwinrt/App.xaml
+++ b/Samples/UserInfo/cppwinrt/App.xaml
@@ -26,7 +26,7 @@
                     Styles that define common aspects of the platform look and feel
                     Required by Visual Studio project and item templates
                  -->
-                <!--ResourceDictionary Source="/Styles/Styles.xaml"/-->
+                <ResourceDictionary Source="/Styles/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
