--- a/Samples/UserInfo/cppwinrt/App.xaml
+++ b/Samples/UserInfo/cppwinrt/App.xaml
@@ -14,6 +14,7 @@
     x:Class="SDKTemplate.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:SDKTemplate"
     RequestedTheme="Dark">
 
     <Application.Resources>
