--- a/Samples/UserInfo/shared/Scenario1_FindUsers.xaml
+++ b/Samples/UserInfo/shared/Scenario1_FindUsers.xaml
@@ -14,6 +14,7 @@
     x:Class="SDKTemplate.Scenario1_FindUsers"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:SDKTemplate"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -29,7 +30,13 @@
                 <TextBlock Style="{StaticResource ScenarioDescriptionTextStyle}" TextWrapping="Wrap">
                     Find users and display user properties
                 </TextBlock>
-                <ComboBox x:Name="UserList" ItemsSource="{Binding}" DisplayMemberPath="DisplayName" Width="300"/>
+                <ComboBox x:Name="UserList" ItemsSource="{Binding}" Width="300">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate x:DataType="local:UserViewModel">
+                            <TextBlock Text="{x:Bind DisplayName, Mode=OneWay}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ComboBox>
                 <Button Content="Show properties" Click="{x:Bind ShowProperties}" Margin="0,10,0,0"/>
                 <Button Content="{x:Bind CurrentUser.DisplayName, Mode=OneWay}" Margin="0,10,0,0"/>
             </StackPanel>
